localStorage, breakpoint md, dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+    .overflow-y-scroll::-webkit-scrollbar {
+      width: 20px;
+      height: 20px;
+    }
+  
+    .overflow-y-scroll::-webkit-scrollbar-track {
+      border-radius: 100vh;
+      background: #9663c9;
+    }
+    
+    
+
+    .overflow-y-scroll::-webkit-scrollbar-thumb {
+      background: #e0cbcb;
+      border-radius: 100vh;
+      border: 3px solid #f6f7ed;
+    }
+  
+    .overflow-y-scroll::-webkit-scrollbar-thumb:hover {
+      background: #73566d;
+    }
+  }
+
+  .overflow-y-scroll{
+    
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 150ms;
+    
+  }
+
+  .overflow-y-scroll{
+    transition-duration: 500ms;
+  } 
